--- a/style.css
+++ b/style.css
@@ -6,6 +6,17 @@ body{
 
 h1{
     font-family: 'Abril Fatface', cursive;
+    fo
 }
 
+.jumbotron{
+    background-color: rgba(240, 248, 255, 0);
+}
+.drop-shadow{
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.179);
+}
+.lead{
+    color: white;
+    font-size: 1.5rem
 
+}
