--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body{
 
 h1{
     font-family: 'Abril Fatface', cursive;
-    fo
 }
 
 .jumbotron{
@@ -19,4 +18,10 @@ h1{
     color: white;
     font-size: 1.5rem
 
+}
+.btn-outline-light{
+    border-color: white;
+}
+.btn-outline-light:hover{
+    background-color: rgba(255, 255, 255, 0.316);
 }
