--- a/style.css
+++ b/style.css
@@ -25,3 +25,9 @@ h1{
 .btn-outline-light:hover{
     background-color: rgba(255, 255, 255, 0.316);
 }
+.container2{
+    padding-top: 50px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+}
